<resources>
    <string name="app_name">AplicacionPMDM</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">altura</string>
    <string name="result">Resultado</string>
    <string name="recalculate">recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="juegosDeMesa">boardgames</string>
    <string name="categorías">categories</string>
    <string name="juegos">games</string>
    <string name="a_ade_un_juego">Añade un juego</string>
    <string name="dialog_add_game">Nombre del Juego</string>
    <string name="dialog_newgame_button">Añadir juego</string>
    <string name="dialog_cooperative_category">Cooperative\n</string>
    <string name="dialog_euro_category">Euro</string>
    <string name="dialog_deckbuilding_category">DeckBuilding</string>
    <string name="dialog_lcg_category">LCG</string>
    <string name="dialog_Legacy_category">Legacy</string>
    <string name="Colors_palette">PALETA DE COLORES</string>
    <string name="change_color">Cambiar Color</string>
    <string name="Painting">Colorear</string>
    <string name="apply">Aplicar</string>

</resources>